--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,55 +1,53 @@
 name: Deploy Hugo site to Pages
 
 on:
+  # 在推送到 master 分支时运行
   push:
     branches:
       - master
+  # 允许你从 Actions 标签页手动运行此工作流程
   workflow_dispatch:
 
+# GITHUB_TOKEN 的权限设置，以允许部署到 GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# 只允许同时进行一次部署，跳过在进行中的部署之间排队的运行。
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
-defaults:
-  run:
-    shell: bash
-
 jobs:
+  # 构建任务
   build:
     runs-on: ubuntu-latest
-    env:
-      HUGO_VERSION: 0.124.1 # 可以指定一个Hugo版本
     steps:
-      - name: Install Hugo CLI
-        run: |
-          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
-          && sudo dpkg -i ${{ runner.temp }}/hugo.deb
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          submodules: recursive
-          fetch-depth: 0
+          submodules: recursive # 获取主题模块
+          fetch-depth: 0       # 获取所有 git 历史记录
+      
       - name: Setup Pages
-        id: pages
         uses: actions/configure-pages@v5
-      - name: Build with Hugo
-        env:
-          HUGO_ENVIRONMENT: production
-          HUGO_ENV: production
-        run: |
-          hugo \
-            --gc \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v3 # 一个专门用来设置Hugo的Action
+        with:
+          hugo-version: 'latest' # 使用最新版Hugo
+          extended: true
+
+      - name: Build
+        run: hugo --minify --baseURL "${{ steps.pages.outputs.base_url }}/"
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./public
 
+  # 部署任务
   deploy:
     environment:
       name: github-pages
