--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,10 @@
 
 ### Hugo ###
 # Generated files by hugo
-./public/
-./resources/_gen/
-./assets/jsconfig.json
-.hugo_stats.json
+/public/
+/resources/_gen/
+/assets/jsconfig.json
+hugo_stats.json
 
 # Executable may be added to repository
 hugo.exe
